--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     /* Bot Container - v2.0 */
     .ga-bot {
       position: fixed !important;
-      bottom: 20px !important; /* Fixed position from bottom edge */
-      right: 20px !important; /* Fixed position from right edge */
+      bottom: 0px !important; /* Position at bottom of iframe */
+      right: 0px !important; /* Position at right of iframe */
       z-index: 9999 !important; /* High z-index to stay on top */
       font-family: inherit;
       /* Force positioning */
@@ -518,8 +518,8 @@
     /* Force bottom-right positioning - override any other styles */
     #gaBot {
       position: fixed !important;
-      bottom: 20px !important;
-      right: 20px !important;
+      bottom: 0px !important;
+      right: 0px !important;
       top: auto !important;
       left: auto !important;
       z-index: 9999 !important;
